かねみtu編集 編集画面

--- a/src/main/resources/static/css/i-style.css
+++ b/src/main/resources/static/css/i-style.css
@@ -590,7 +590,7 @@ footer .copyright{
 	font-weight: bold;
 }
 .copyright {
-	position: relative;
+	position: absolute;
 	bottom: 0;
   }    
 /* 日本地図 */
