--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -199,7 +199,7 @@
 	<header id="header">
 		<div class="container">
 			<div id="h_top">
-				<div class="h_logo"><a href=""><img src="imag/logo2.png" alt=""/></a></div>
+				<div class="h_logo"><a href=""><img src="../static/imag/logo2.png" alt=""/></a></div>
 				<div class="h_nav">
 					<nav id="gNav">
 						<ul class="nav">
@@ -217,7 +217,7 @@
 		
 		<header class="mheader">
 			<div class="pc_menuFlex">
-				<div class="i-logo"><a href="#"><img src="images/logo2.png" alt=""/></a>
+				<div class="i-logo"><a href="#"><img src="../static/imag/logo2.png" alt=""/></a>
 				</div>
 				<div class="pc_menu">
 					<ul>
