ログアウトページ編集

--- a/src/main/resources/static/css/i-style.css
+++ b/src/main/resources/static/css/i-style.css
@@ -552,7 +552,7 @@ footer .copyright{
 	text-align: center;
 }
 .copyright {
-	position: relative;
+	position: absolute;
 	bottom: 0;
   }    
 /*pc版--------------------------------------*/
