--- a/src/main/resources/templates/out.html
+++ b/src/main/resources/templates/out.html
@@ -222,7 +222,7 @@ $(function($){
                              <h3 class ="lo-tittle">ログアウトしました</h3>
                      </div>
                     
-                             <div class="btn-box"><button type="submit" class="btnds btn-submit" onclick="location.href='purpose_osaka.html'">ログイン</button></div>
+                             <div class="btn-box"><button type="submit" class="btnds btn-submit" onclick="location.href='purpose_osaka.html'">ログインページへ</button></div>
                      
              </div>
      </div>
