--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -207,7 +207,7 @@ height:100%;}
 		<div class="container">
 			<div id="h_top">
 				<div class="h_logo">
-					<a href=""><img th:src="@{/imag/logo22.png}" alt="" /></a>
+					<a href=""><img th:src="@{/imag/logo2.png}" alt="" /></a>
 				</div>
 				<div class="h_nav">
 					<nav id="gNav">
@@ -227,7 +227,7 @@ height:100%;}
 	<header class="mheader">
 		<div class="pc_menuFlex">
 			<div class="i-logo">
-				<a href="#"><img th:src="@{/imag/logo22.png}" alt="" /></a>
+				<a href="#"><img th:src="@{/imag/logo2.png}" alt="" /></a>
 			</div>
 			<div class="pc_menu">
 				<ul>
@@ -252,7 +252,7 @@ height:100%;}
 			th:object="${costomerForm}">
 
 			<div class="login-wrapper" id="login">
-				<div class="container">
+				<div class="containerds">
 					<div class="login">
 						<div class="login-wrapper-title">
 							<h3 class="lo-tittle">新規登録</h3>
