--- a/src/main/resources/templates/myPage.html
+++ b/src/main/resources/templates/myPage.html
@@ -204,8 +204,8 @@
 					<nav id="gNav">
 						<ul class="nav">
 							<li><a href="#top">TOP</a></li>
-							<li><a href="register.html" class="btn-sin">新規登録</a></li>
-							<li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
+							<li><a href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+							<li><a href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
 						</ul>
 						<div class="mask"></div>
 					</nav>
@@ -222,8 +222,8 @@
 				<div class="pc_menu">
 					<ul>
 						<li><a href="#top">TOP</a></li>
-						<li><a href="register.html" class="btn-sin">新規登録</a></li>
-						<li><a href="manager_login.html"class= "btn-log">ログイン</a></li>
+						<li><a href="@{/oritabi/register}" class="btn-sin">新規登録</a></li>
+						<li><a href="@{/oritabi/manager_login}"class= "btn-log">ログイン</a></li>
 					</ul>
 				</div> 
 			</div>
@@ -284,8 +284,8 @@
 	<p class="mypage-text">名前場所（URL）</p> -->
 	<div class="mypage-inner"> 
 	
-	<a href="" class ="mypace-buttun">修正する</a>
-	<a href="" class ="mypace-buttun-a">保存</a>
+	<a href="@{/oritabi/map}" class ="mypace-buttun">修正する</a>
+	<a href="@{/oritabi/out}" class ="mypace-buttun-a">Logout</a>
 	</div>
 	<!-- <div class="mypage-text">メモ帳</div> -->
 		</div>
@@ -326,11 +326,11 @@
 						</dl>
 						
 						<dl>
-							<dd><a href ="register.html"><div class="btn-sin">新規登録</div></a></dd>
+							<dd><a href ="@{/oritabi/register}"><div class="btn-sin">新規登録</div></a></dd>
 						</dl>
 						
 						<dl>
-							<dd><a href="manager_login.html"><div class= "btn-log">ログイン</div></a></dd>
+							<dd><a href="@{/oritabi/manager_login}"><div class= "btn-log">ログイン</div></a></dd>
 						</dl>
 				</div>
 	
