--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -19,10 +19,10 @@
 <!--headercss-->
 <link th:href="@{/css/meanmenu.css}" rel="stylesheet" type="text/css">
 <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" type="text/css">
-<link href="@{/css/header.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/header.css}" rel="stylesheet" type="text/css">
 <!--css-->
-<link href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
-<link href="@{/css/parts.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/i-style.css}" rel="stylesheet" type="text/css">
+<link th:href="@{/css/parts.css}" rel="stylesheet" type="text/css">
 
 <!--font-awesome-->
 <link rel="stylesheet" type="text/css"
