--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -17,3 +17,17 @@ button{
 	position: absolute;
 	bottom: 0;
   } 
+  .ruuto-tittle{
+  font-size:25px;
+  text-align:center:
+  }
+  .ruuro-box
+  width:80%;
+  margin:0 auto;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: speace-between;
+  }
+  .jun{
+  width:40%;
+ }
