--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -19,7 +19,7 @@ button{
   } 
   .ruuto-tittle{
   font-size:25px;
-  text-align:center:
+  text-align:center;
   margin-top:150px;
   }
   .ruuro-box{
