--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -242,6 +242,7 @@
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 
 	<!-- 表示用の要素1 -->
+	<div class="ruuro-boxall">
 	<div class="ruuro-box" id="displayElement1">
 		<!--  マップの表示 -->
 		<div id="map1" style="height: 300px; width:50%;"></div>
@@ -255,7 +256,7 @@
 			<button id="undoButton">一つ戻る</button>
 		</div>
 	</div>
-
+</div>
 	<!-- 表示用の要素2（初めは非表示） -->
 	<div id="displayElement2" style="display: none;">
 
