--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -6,8 +6,12 @@ button{
  color: #fff;
  border: solid 1px #c1692a;
  border-radius: 25px;
+ margin:0 auto:
 }
-
+.undoButton{
+	width:50%;
+	margin:0 auto;
+}
 
 .copyright {
 	position: absolute;
@@ -19,10 +23,15 @@ button{
   margin-top:150px;
   font-weight:bold;
   }
-  .ruuro-box{
+  .ruuro-boxall{
   width:80%;
+   margin:0 auto;
+    bacgroundr:#fff;
+  }
+  .ruuro-box{
+  width:100%;
   padding:20px;
-  bacground-color:#fff;
+ 
   margin:0 auto;
   align-items:center;
   display:flex;
@@ -31,4 +40,5 @@ button{
   }
   .jun{
   width:40%;
+  margin:0 auto;
  }
