--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -11,10 +11,15 @@ button{
 }
 .undoButton1{
 	text-align:center;
-	width:50%;
+	width:100%;
 	margin:10px auto;
 }
-
+.undoButton1-1{
+	width:50%;
+	margin:10px auto;
+	
+	
+}
 .copyright {
 	position: absolute;
 	bottom: 0;
