--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -253,7 +253,8 @@
 			<div id="addressDisplay"></div>
 			<div id="selectedAddresses"></div>
 			<!--  ボタン表示 -->
-			<button class="undoButton1" id="undoButton">一つ戻る</button>
+			<div class="undoButton1-1">
+			<button class="undoButton1" id="undoButton">一つ戻る</button></div>
 		</div>
 	</div>
 </div>
