--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -249,7 +249,7 @@
 		<!--  選択した住所表示 -->
 		<div class="jun">
 			<p class="jun-text">ピンをクリックして順番を決めてください</p>
-			<p class="jun-text">今選択した目的地</p>
+			<p class="jun-text1">今選択した目的地</p>
 			<div id="addressDisplay"></div>
 			<div id="selectedAddresses"></div>
 			<!--  ボタン表示 -->
