--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -236,8 +236,8 @@
 		</div>
 	</header>
 
-	
-	<h1 class= "ruuto-tittle">ルート選択</h1>
+	<div class ="ruuto-tittle"><div class ="kinki-img"><img th:src="@{/imag/logo3.png}"></div>ルートを選択しよう</div>
+
 
 	<script src="https://code.jquery.com/jquery.min.js"></script>
 
