--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -30,6 +30,12 @@ button{
   margin-top:150px;
   font-weight:bold;
   }
+  .kinki-img{
+  width:100px;
+  margin:0 auto;
+  margin-bottom:15px;
+  }
+  
   .ruuro-boxall{
   width:80%;
    margin:0 auto;
