--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -291,7 +291,7 @@
 	<!-- チェックボックス表示 -->
 	<!--<div th:each="check:${spotcheck}">
 	<p >[[${check}]]</p>-->
-</div>
+
 <!-- ↑チェックボックス表示 -->
 
 	<script th:inline="javascript">
@@ -508,7 +508,9 @@
 
 	<br>
 	<!-- ボタン -->
-	<button id="toggleButton">ルート表示</button>
+	<div class="toggleButton1-1">
+	<button class="toggleButton1"id="toggleButton">ルート表示</button>
+	</div>
 	<hr>
 	<br>
 	<div>
