--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -24,13 +24,13 @@ button{
 	
 }
 .toggleButton1{
-	width:50%;
+	width:100%;
 	margin:0 auto;
 	padding:10px;
 }
 .toggleButton1-1{
-	width:100%;
-	
+	width:50%;
+	margin:0 auto;
 }
 .copyright {
 	position: absolute;
