--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -261,7 +261,11 @@
 	</div>
 </div>
 	<!-- 表示用の要素2（初めは非表示） -->
-	<div id="displayElement2" style="display: none;">
+	
+	
+	
+	<div class="ruuru-box">
+	<div class="ruuru-box" id="displayElement2" style="display: none;">
 
 
 
@@ -270,9 +274,9 @@
 
 
 		<!-- mapの表示 -->
-		<div id="map2" style="height: 300px;"></div>
+		<div id="map2" style="height: 300px;width:50%;"></div>
 		<div class="suke">
-			<h3>スケジュール</h3>
+			<h3 class="suke-tittle">スケジュール</h3>
 			<!-- 住所の要素 -->
 			<!-- 所要時間の要素 -->
 			<div id="address_1" name="touristId_1"></div>
@@ -287,6 +291,7 @@
 			<!-- 所要総時間の要素 -->
 			<div id="totalDuration"name="totalDuration"></div>
 		</div>
+	</div>
 	</div>
 	<!-- チェックボックス表示 -->
 	<!--<div th:each="check:${spotcheck}">
