--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -264,7 +264,7 @@
 	
 	
 	
-	<div class="ruuru-box">
+	<div class="ruuro-box">
 	<div class="ruuru-box" id="displayElement2" style="display: none;">
 
 
