--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -264,8 +264,8 @@
 	
 	
 	
-	<div class="ruuro-box">
-	<div class="ruuru-box" id="displayElement2" style="display: none;">
+	<div class="ruuro-boxall">
+	<div class="ruuro-box" id="displayElement2" style="display: none;">
 
 
 
