--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -79,6 +79,8 @@ button{
     padding:20px;
   margin:0 auto;
  }
- .suke-tittle{}
+ .suke-tittle{
  font-size:20px;
  font-weight:bold;
+ margin-bottom:10px;
+ }
