--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -1,5 +1,7 @@
 @charset "UTF-8";
-
+html{
+	position:unset;
+}
 button{
  padding: 10px;
  background: #c1692a;
@@ -84,3 +86,12 @@ button{
  font-weight:bold;
  margin-bottom:10px;
  }
+ .spot-btnbox{
+ width:50%;
+ margin:0 auto;
+  display:flex;
+  flex-wrap:wrap;
+  justify-content: center;
+  padding-bottom:30px;
+ }
+ 
