--- a/src/main/resources/static/css/map.css
+++ b/src/main/resources/static/css/map.css
@@ -89,8 +89,11 @@ button{
  margin:0 auto;
   display:flex;
   flex-wrap:wrap;
-  justify-content: center;
+ justify-content: space-between;
   padding-bottom:30px;
+ }
+ .toggleButton1{
+ width:40%;
  }
  html{
 	position:unset;
