--- a/src/main/resources/templates/map.html
+++ b/src/main/resources/templates/map.html
@@ -524,7 +524,7 @@
 		<!--リスト作成ボタン(ピン留めの場所が登録される)-->
 		
 			<form th:method="POST" th:action="@{/oritabi/spotcall}">
-				<button type="submit">スポットの変更</button>
+				<button type="submit" class="toggleButton1">スポットの変更</button>
 			</form>
 
 			<br>
